--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,34 +1,34 @@
 name: expiry_cart
 description: A new Flutter project.
 
-publish_to: 'none' 
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.11.0 <3.0.0"
+    sdk: '>=2.11.0 <3.0.0'
 
 dependencies:
-  flutter:
-    sdk: flutter
+    flutter:
+        sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  http: ^0.13.4
+    cupertino_icons: ^1.0.2
+    http: ^0.13.4
+    flutter_secure_storage: ^5.0.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+    flutter_test:
+        sdk: flutter
 
-  flutter_lints: ^1.0.0
+    flutter_lints: ^1.0.0
 
 flutter:
-  uses-material-design: true
-  assets:
-  - images/
-  fonts:
-    - family: Meow Script
-      fonts:
-        - asset: fonts/MeowScript-Regular.ttf
-    - family: IBM Plex Sans
-      fonts:
-        - asset: fonts/IBMPlexSans-Regular.ttf
-    
+    uses-material-design: true
+    assets:
+        - images/
+    fonts:
+        - family: Meow Script
+          fonts:
+              - asset: fonts/MeowScript-Regular.ttf
+        - family: IBM Plex Sans
+          fonts:
+              - asset: fonts/IBMPlexSans-Regular.ttf
