--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     cupertino_icons: ^1.0.2
     http: ^0.13.4
     flutter_secure_storage: ^5.0.2
+    image_picker: ^0.8.4+4
 
 dev_dependencies:
     flutter_test:
