--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     http: ^0.13.4
     flutter_secure_storage: ^5.0.2
     image_picker: ^0.8.4+4
+    intl: ^0.17.0
 
 dev_dependencies:
     flutter_test:
